# undergground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  grader.cpp
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  Conan.cmake
problems/0000/: tests  tests.yaml
problems/0001/: 1.out  tests  tests.yaml
problems/0002/: tests.yaml
problems/0003/: tests.yaml
problems/0004/: tests.yaml
problems/0005/: tests.yaml
problems/0006/: 3.out  4.out  5.out  tests.yaml
problems/0100/: tests  tests.yaml
problems/0101/: tests.yaml
problems/0102/: tests  tests.yaml
problems/0103/: tests.yaml
problems/0104/: tests  tests.yaml
problems/0110/: 6.in  tests.yaml
problems/0202/: solution  solution.cpp  tests.yaml
problems/0300/: 1.in  5.in  6.in  tests  tests.yaml
problems/0302/: 2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  testgen.cpp  tests  tests.yaml
problems/0304/: 2.in  3.in  4.in  5.in  6.in  7.in  8.in  testgen  testgen.cpp  tests  tests.yaml
problems/0305/: 1.in  2.in  tests  tests.yaml
problems/0306/: tests.yaml
problems/0400/: testgen  testgen.cpp  tests.yaml
problems/0401/: testgen  testgen.cpp  tests  tests.yaml
problems/0402/: tests  tests.yaml
problems/0403/: testgen  tests  tests.yaml
problems/0407/: testgen  tests.yaml
problems/0408/: 4.out  testgen.cpp  tests.yaml
problems/0409/: testgen.cpp  tests  tests.yaml
problems/0410/: tests.yaml
problems/0411/: 4.in  testgen  testgen.cpp  tests.yaml
problems/0412/: 1.in  5.out  testgen.cpp  tests  tests.yaml
problems/0500/: tests.yaml
problems/0501/: 5.out  6.out  testgen  tests.yaml
problems/0502/: tests.yaml
problems/0503/: tests.yaml
problems/0504/: tests  tests.yaml
problems/0505/: testgen.cpp  tests.yaml
problems/0506/: 4.out  tests.yaml
problems/0507/: 4.out  7.out  tests.yaml
problems/0600/: kris  tests  tests.yaml
problems/0601/: tests  tests.yaml
problems/0602/: 4.out  tests.yaml
problems/0603/: 4.in  tests  tests.yaml
problems/0700/: 4.in  4.out  5.in  5.out  testgen  testgen.cpp  tests  tests.yaml
problems/0701/0000/: solution.cpp  tests
problems/0701/0006/: 5.in  sol  sol.cpp
problems/0701/0110/: 7.in  solution  solution.cpp  tests
problems/0701/0300/: 3.in  4.in  7.in  testgen  testgen.cpp
problems/0701/0302/: 1.in  1.out  2.in  3.out  4.out  5.in  5.out  6.in  6.out  solution  testgen
problems/0701/0304/: 3.in  4.in  5.in  6.in  7.in  testgen  testgen.cpp
problems/0701/0402/: 2.out  testgen  testgen.cpp
problems/0701/0403/: 4.in  4.out  testgen.cpp
problems/0701/0407/: testgen.cpp
problems/0701/0408/: testgen
problems/0701/0409/: testgen
problems/0701/0411/: 3.in  4.in
problems/0701/0412/: 2.in  3.in  3.out  testgen
problems/0701/0501/: testgen.cpp
problems/0701/0502/: testgen  testgen.cpp
problems/0701/0505/: testgen
problems/0701/0507/: 3.out  4.out  testgen  testgen.cpp
problems/0701/0600/: 0600-Kris-1356799576.cpp  7.in  testgen  testgen.cpp
problems/0701/0602/: 5.out
problems/0701/0603/: 3.in
problems/0701/0700/: 4.out  5.in
src/: CMakeLists.txt  compiler.cpp  compiler.h  database.cpp  database.h  grader.cpp  grader.h  io_handler.h  main.cpp  process.h
src/grader/: CMakeLists.txt  compiler.cpp  compiler.h  grader.cpp  grader.h  io_handler.cpp  io_handler.h  test_loader.cpp  test_loader.h
src/grader/include/grader/: compiler.h  grader.h  test_loader.h
src/system/: CMakeLists.txt  file.h  process.cpp  process.h
src/system/include/system/: file.h  process.h
src/tools/: CMakeLists.txt  yaml_converter.cpp
test/: CMakeLists.txt  integration.cpp  tests.cpp
